Explicitly enable github default plugins
Signed-off-by: John Strunk <john.strunk@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,17 @@ markdown: kramdown
 #theme: minima
 theme: jekyll-theme-modernist
 plugins:
+  # Enabled by default on github
+  - jekyll-coffeescript
+  - jekyll-gist
+  - jekyll-github-metadata
+  - jekyll-paginate
+  - jekyll-relative-links
+  - jekyll-optional-front-matter
+  - jekyll-readme-index
+  - jekyll-default-layout
+  - jekyll-titles-from-headings
+  # Optional plugins
   - jekyll-feed
 
 # Exclude from processing.
